<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context="com.example.anupya_pamidimukkala.picmyallergy.Results"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="324dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="51dp"
        android:fontFamily="@font/opensans"
        android:text="@string/results"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/another"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="343dp"
        android:fontFamily="@font/opensans"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/allergies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="253dp"
        android:layout_height="232dp"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_dashboard_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/another"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="44dp"
        android:text="@string/another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/allergies"
        app:layout_constraintTop_toBottomOf="@+id/pick" />

    <Button
        android:id="@+id/allergies"
        android:layout_width="144dp"
        android:layout_height="56dp"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="43dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/another"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
